--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
     volumes:
       - certbot-etc:/etc/letsencrypt
       - wordpress:/var/www/html
-    command: certonly --webroot --webroot-path=/var/www/html --email test@unudev.com --agree-tos --no-eff-email --staging -d emaresa.unudev.com
+    command: certonly --webroot --webroot-path=/var/www/html --email test@unudev.com --agree-tos --no-eff-email --force-renewal -d emaresa.unudev.com
 
 volumes:
   certbot-etc:
